@@ -1,0 +1,7 @@
+void SOUND_INIT(void);
+
+void SOUND(unsigned char chan, unsigned char pitch,
+           unsigned char distortion, unsigned char volume);
+
+void DSOUND(unsigned char chan, unsigned int pitch,
+           unsigned char distortion, unsigned char volume);
